--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kysely-extends-pg-query",
   "version": "0.0.1",
   "description": "kysely plugin for PostgreSQL",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
